--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.7",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.5",
     "typescript": "^4.0.3"
